[package]
name = "rsadsb-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.15"
panic-semihosting = "0.5.6"

[dependencies.stm32f3xx-hal]
version = "0.8.2"
features = ["ld", "stm32f303xc"]
