[package]
name = "rsadsb-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.15"
alloc-cortex-m = "*"
panic-semihosting = "0.5.6"
hexlit = "0.5.3"

[dependencies.adsb_deku]
version = "*"
path = "../adsb_deku/libadsb_deku"
default-features = false
features = ["alloc"]

[dependencies.stm32f3xx-hal]
version = "0.8.2"
features = ["ld", "stm32f303xc"]
