[package]
name = "rsadsb-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7"
alloc-cortex-m = "*"
panic-semihosting = "0.5.6"
hexlit = "0.5.3"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.adsb_deku]
version = "*"
git = "https://github.com/rsadsb/adsb_deku"
branch = "add-no-std-support"
default-features = false
features = ["alloc"]

[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal"
branch = "master"
features = ["ld", "stm32f303xc"]
